[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_piv = { path = "../rusty_piv", version = "0.1.0" }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
jsonl = "4.0.1"
json_rpc = { path = "../json_rpc", version = "0.1.0" }
rocksdb = "0.21.0"
bincode = "1.3.3"
